feat: 添加了对数字的词法解析与测试

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,15 +7,16 @@ set(CMAKE_C_STANDARD_REQUIRED ON)
 
 add_compile_options(-Wall -Wextra -Werror)
 
-file(GLOB_RECURSE CCD_HEADERS
-    ${PROJECT_SOURCE_DIR}/include/*.h
-)
-file(GLOB_RECURSE CCD_SOURCES
-    ${PROJECT_SOURCE_DIR}/src/*.c
-)
+# file(GLOB_RECURSE CCD_HEADERS
+# ${PROJECT_SOURCE_DIR}/include/*.h
+# )
 
-include_directories(${PROJECT_SOURCE_DIR}/include)
-add_library(CCloneDetector STATIC ${CCD_SOURCES} ${CCD_HEADERS})
+# include_directories(${PROJECT_SOURCE_DIR}/include)
+# add_library(ccd STATIC ${CCD_HEADERS})
+add_subdirectory(src)
 
 add_executable(ccd_cli src/main.c)
-target_link_libraries(ccd_cli CCloneDetector)
+target_link_libraries(ccd_cli ccd)
+
+enable_testing()
+add_subdirectory(tests)
